--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://InTruder-Sec.github.io/React-Projects",
+  "homepage": "http://intruder-sec.github.io/Weather-App-React",
   "name": "react-projects",
   "version": "0.1.0",
   "private": true,
